--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+/* 헤더 스타일 css */
+
+body{
+  margin: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Header_container{
+  border: 1px solid black;
+  height: 60px;
+  max-width: 100%;  
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+.Header_profile{
+  border-radius: 50%;
+  width:50px;
+  height: 50px;
+  border: 1px solid black;
+  margin-right: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Header_Right_container{
+  display: flex;
+  align-items: center;
+}
+
+.Header_LOGO{
+  font-size: 30px;
+}
+
+.Header_icon{
+  font-size: 40px;
+  margin-left: 10px;
 }
