06-27 15:47분 / Swiper.js 완성

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@ body{
   margin : 0px;
 }
 
+
+@media screen and (max-width:768px){
+  .IMGS{
+    height: 100%;
+    background-size: contain;
+  }
+}
