--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -1,3 +1,7 @@
 body{
   margin:0px;
+  font-family: 'Noto Sans KR', sans-serif;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap');
+
