--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap');
+
 body{
+  font-family: 'Noto Sans KR', sans-serif;
   margin:0px;
+}
+
+.d-block{
+  height: 409px;
 }
