--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -94,3 +94,322 @@ font-size: 20px;
 line-height: 29px;
 color: #A8A8A8;
 }
+
+
+.ChatList{
+  background-color:#fff;
+  height: 92vh;
+  width: 40%;
+  margin: 30px auto;
+  z-index: 1;
+  border: 2px solid #000000;
+  border-radius: 30px;
+}
+
+.One{
+  padding:20px;
+  text-align: right;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.One > button {
+  width:70px;
+  height: 70px;
+  background-color: #E4E4E4;
+  border: none;
+  color: #3C3C3C;
+  font-weight: 700;
+  font-size: 35px;
+  border-radius: 10px;
+}
+
+.One > button:hover{
+  transform: scale(1.10);
+}
+
+.ChatListContainer{
+  border: 2px solid #D9D9D9;
+  border-radius: 10px;
+  width:90%;
+  height:85%;
+  margin: auto;
+}
+
+.List{
+  width: 90%;
+  height: 80px;
+  border: 1px solid #E4E4E4;
+  border-radius: 10px;
+  opacity: 0.8;
+  margin: auto;
+  margin-top: 20px;
+  display: flex;
+}
+
+.ChatImg{
+  width:15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ChatImgOne{
+  width: 70px;
+  height: 70px;
+  border: 1px solid #000000;
+  border-radius: 50%;
+}
+
+.ChatTitle{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 31px;
+color: #000000;
+}
+
+.ChatLogo{
+  width:70px;
+  height: 70px;
+}
+
+.ChatLogo > img {
+  width:70px;
+  height: 70px;
+}
+
+.ChatInfo{
+  width:75%;
+}
+
+.ChatBell{
+  width:10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.ChatBell > span{
+  width:40px;
+  height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F4B03E;
+  color: #FFFFFF;
+  font-family: 'Noto Sans KR';
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 17px;
+  border: none;
+}
+
+.ChatName{
+  height: 40%;
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 23px;
+  margin-left: 10px;
+}
+
+.ChatContent{
+  height: 35%;
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 17px;
+  margin-left: 10px;
+}
+
+.ChatDate{
+  height: 25%;
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 17px;
+  color: #3C3C3C;
+  float: right;
+  margin-right: 10px;
+}
+
+.message-container{
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.message-container::-webkit-scrollbar {
+  display: none;
+}
+
+.message-containerTwo{
+  width: 100%;
+  height: 75%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.message-containerTwo::-webkit-scrollbar {
+  display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.icon{
+  font-size: 45px;
+  position: relative;
+  bottom: 5px;
+  right: 5px;
+}
+
+.RoomOne{
+  padding:20px;
+  text-align: right;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.RoomOne > button{
+  width:70px;
+  height: 70px;
+  background-color: #E4E4E4;
+  border: none;
+  color: #3C3C3C;
+  font-weight: 700;
+  font-size: 35px;
+  border-radius: 10px;
+}
+
+.RoomOne > button:hover{
+  transform: scale(1.10);
+}
+
+.RoomDate{
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 23px;
+  color: #A8A8A8;
+}
+
+.RoomFake{
+  width:70px;
+  height: 70px;
+}
+
+.RoomChatList{
+  height: 100%;
+}
+
+.RoomSend{
+  height:8%;
+  margin-top: 15px;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.RoomInput{
+  width:80%;
+  padding: 15px;
+  border-radius: 30px;
+  height:80%;
+  border: 1px solid #A8A8A8;
+  position: relative;
+  left: 30px;
+}
+
+.RoomSend > button{
+  border: none;
+  background-color: transparent;
+  color: #6B4E16;
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 23px;
+  position: relative;
+  right: 60px;
+}
+
+.RoomChat{
+  width: 85%;
+  height: 100px;
+  margin-left: 40px;
+  display: flex;
+}
+
+.RoomImg{
+  width:15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.RoomContent{
+  width:70%;
+}
+
+.RoomTime{
+  width:15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 23px;
+  color: #A8A8A8;
+}
+
+.RoomProfile{
+  width:70px;
+  height: 70px;
+  border:1px solid black;
+  border-radius: 50%;
+}
+
+.RoomName{
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 23px;
+  color: #000000;
+  height: 40%;
+  display: flex;
+  align-items: center;
+}
+
+.ChatRoomInput {
+  width:100%;
+  height: 60px;
+  border: 1px solid #A8A8A8;
+  border-radius: 20px;
+  padding:20px
+}
