--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -102,7 +102,6 @@ color: #A8A8A8;
   width: 40%;
   margin: 30px auto;
   z-index: 1;
-  border: 2px solid #000000;
   border-radius: 30px;
 }
 
@@ -358,9 +357,24 @@ color: #000000;
 .RoomChat{
   width: 85%;
   height: 100px;
-  margin-left: 40px;
+  margin-left: 20px;
+  margin-bottom: 20px;
   display: flex;
 }
+
+.RoomChatX{
+  width: 85%;
+  height: 100px;
+  margin-left: 70px;
+  display: flex;
+}
+
+
+
+
+
+
+
 
 .RoomImg{
   width:15%;
@@ -378,27 +392,39 @@ color: #000000;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: flex-end;
+  align-items: flex-start;
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 23px;
   color: #A8A8A8;
+  padding-left: 15px;
 }
+
+
+
+
+
+
+
+
+
+
+
 
 .RoomProfile{
   width:70px;
   height: 70px;
-  border:1px solid black;
   border-radius: 50%;
+  border: 1px solid black;
 }
 
 .RoomName{
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 23px;
   color: #000000;
   height: 40%;
@@ -406,10 +432,100 @@ color: #000000;
   align-items: center;
 }
 
+.RoomNameX{
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  color: #000000;
+  height: 40%;
+  display: flex;
+  align-items: center;
+  margin-right: 20px;
+  justify-content: flex-start;
+}
+
+
+
+
+
+
+.ChatRoomInputX {
+  width:100%;
+  height: 60px;
+  border-radius: 20px;
+  padding:20px;
+  border:none;
+  background-color: #64b5f6;
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  color: #000000;
+}
+
 .ChatRoomInput {
   width:100%;
   height: 60px;
-  border: 1px solid #A8A8A8;
+  border:none;
   border-radius: 20px;
-  padding:20px
+  font-size: 20px;
+  padding:20px;
+  background-color: #81c784;
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  color: #000000;
+}
+
+.RoomFake{
+  width:100px;
+  display: flex;
+}
+
+.me {
+  width: 50%;
+  text-align: center;
+}
+
+.you{
+  width: 50%;
+  text-align: center;
+}
+
+.circle2{
+  width: 30px;
+  height: 30px;
+  border: 1px solid #64b5f6;
+  border-radius: 50%;
+  background-color: #64b5f6;
+}
+
+.circle{
+  width: 30px;
+  height: 30px;
+  border: 1px solid #81c784;
+  border-radius: 50%;
+  background-color: #81c784;
+}
+
+.who{
+  height: 40%;
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  color: #000000;
+}
+
+.circlePosition{
+  height: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
