--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -552,3 +552,25 @@ h4 {
 .pagination-container a:hover:not(.active) {
   background-color: rgb(238, 238, 238);
 }
+
+.btnBox {
+  width: 100%;
+  text-align: right;
+}
+
+
+.MoreBtn{
+  border: 2px solid #ddd;
+  width: 70px;
+  height: 30px;
+  transition: all 0.25s ease;
+  border-radius: 5px;
+  margin-top: 30px;
+  position: relative;
+  left:0px;
+}
+
+.MoreBtn:hover {
+  border-color: #111;
+  box-shadow: 1px 2px 4px rgb(0 0 0 / 10%);
+}
