--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -1,8 +1,16 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap");
+@font-face {
+  font-family: 'NanumGothic';
+  src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumGothic/NanumGothic.eot);
+  src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumGothic/NanumGothic.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumGothic/NanumGothic.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumGothic/NanumGothic.ttf) format("truetype");
+}
 
-body {
-  font-family: "Noto Sans KR", sans-serif;
+html{
   margin: 0px;
+  background-color: #F5F5F5;
+}
+
+.MainBackGround{
+  background-color: #F5F5F5;
 }
 
 /* 부트 스트랩 캐러셀 높이 스타일 */
