--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -1,16 +1,10 @@
-@font-face {
-  font-family: 'NanumGothic';
-  src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumGothic/NanumGothic.eot);
-  src: url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumGothic/NanumGothic.eot?#iefix) format("embedded-opentype"), url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumGothic/NanumGothic.woff) format("woff"), url(https://hangeul.pstatic.net/hangeul_static/webfont/NanumGothic/NanumGothic.ttf) format("truetype");
-}
-
-html{
+html {
   margin: 0px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
-.MainBackGround{
-  background-color: #F5F5F5;
+.MainBackGround {
+  background-color: #f5f5f5;
 }
 
 /* 부트 스트랩 캐러셀 높이 스타일 */
@@ -566,8 +560,7 @@ h4 {
   text-align: right;
 }
 
-
-.MoreBtn{
+.MoreBtn {
   border: 2px solid #ddd;
   width: 70px;
   height: 30px;
@@ -575,7 +568,7 @@ h4 {
   border-radius: 5px;
   margin-top: 30px;
   position: relative;
-  left:0px;
+  left: 0px;
 }
 
 .MoreBtn:hover {
