--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;800&display=swap');
 html {
   margin: 0px;
   background-color: #f5f5f5;
 }
 
+*{
+  font-family: 'Nanum Gothic', sans-serif;
+}
 .MainBackGround {
   background-color: #f5f5f5;
 }
