헤더 메뉴바 색상 투명 / 채팅리스트 휴지통변경/ 북마크 S 카드 완성

--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -640,3 +640,13 @@ h4 {
   border-color: #111;
   box-shadow: 1px 2px 4px rgb(0 0 0 / 10%);
 } */
+
+.Trash{
+  margin-right: 20px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.Trash:hover{
+  color:red;
+}
