--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -621,7 +621,7 @@ h4 {
   width: 100%;
   text-align: right;
 }
-/* 
+
 .MoreBtn {
   border: 2px solid #ddd;
   width: 70px;
@@ -631,12 +631,13 @@ h4 {
   margin-top: 30px;
   position: relative;
   left: 0px;
+  margin-bottom: 10px;
 }
 
 .MoreBtn:hover {
   border-color: #111;
   box-shadow: 1px 2px 4px rgb(0 0 0 / 10%);
-} */
+}
 
 .Trash{
   margin-right: 20px;
@@ -646,4 +647,13 @@ h4 {
 
 .Trash:hover{
   color:red;
+}
+
+.BookHr{
+  margin: 30px;
+  width: 1013px;
+  position: relative;
+  right: 81px;
+  border: 1px solid #A8A8A8;
+  box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.1);
 }
