--- a/src/modal/Map/modal.css
+++ b/src/modal/Map/modal.css
@@ -19,7 +19,6 @@
     margin: 0 auto;
     border-radius: 0.3rem;
     background-color: #fff;
-    /* 팝업이 열릴때 스르륵 열리는 효과 */
     animation: modal-show 0.3s;
     overflow: hidden;
   }
@@ -34,10 +33,13 @@
     position: absolute;
     top: 15px;
     right: 15px;
-    width: 30px;
-    font-size: 21px;
+    width: 50px;
+    height: 30px;
+    font-size: 13px;
     font-weight: 700;
     text-align: center;
+    border: 1px solid #A8A8A8;
+    border-radius: 20px;
     color: #999;
     background-color: transparent;
   }
