--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -423,7 +423,7 @@ h4 {
 }
 
 .youContent > span{
-  padding: 10px 15px;
+  padding: 20px;
   height: 35px;
   font-family: 'NanumGothic';
   font-style: normal;
